--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
 body {
     margin: 0;
     padding: 0;
-    position: relative;
 }
 
 .section {
     width: 80%;
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
     background-color: antiquewhite;
 }
 
 .container {
-    width: 50%;
+    padding: 30px 25%;
     font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-family: 'Slabo 27px', serif;
 }
 
-h1, h2 {
-    font-family: 'Slabo 27px', serif;
+h1 {
+    margin: 30px 0 0 0;
+}
+
+h2 {
+    margin: 0 0 30px 0;
+}
+
+iframe {
+    width: 100%;
 }
